--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+	<script type="text/javascript" src="donutapi.json"></script>
     <title>Donut API</title>
 </head>
 <body>
